--- a/package.json
+++ b/package.json
@@ -3,17 +3,17 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  
   "scripts": {
     "dev": "vite",
     "build": "npx vite build",
     "preview": "npx vite preview"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "bun": "^1.3.8",
+    "firebase": "^10.8.1",
     "lucide-react": "^0.344.0",
-    "firebase": "^10.8.1"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.56",
